--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^18.16.3",
     "nodemon": "^2.0.22",
@@ -16,9 +17,16 @@
     "typescript": "^5.0.4"
   },
   "dependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/pino": "^7.0.5",
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.7",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongoose": "^7.1.0"
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^7.1.0",
+    "pino": "^8.12.0",
+    "pino-pretty": "^10.0.0"
   }
 }
