--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@types/multer": "^1.4.7",
     "@types/node": "^18.16.3",
     "@types/pino": "^7.0.5",
+    "@types/swagger-jsdoc": "^6.0.1",
+    "@types/swagger-ui-express": "^4.1.3",
     "@types/uuid": "^9.0.1",
     "nodemon": "^2.0.22",
     "ts-node": "^10.9.1",
@@ -31,6 +33,8 @@
     "multer": "^1.4.5-lts.1",
     "pino": "^8.12.0",
     "pino-pretty": "^10.0.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^4.6.3",
     "uuid": "^9.0.0"
   }
 }
